--- a/assets/repo/repo.conf
+++ b/assets/repo/repo.conf
@@ -1,14 +1,14 @@
 APT {
 FTPArchive {
 Release {
-Origin "ORIGIN_HERE";
-Label "LABEL_HERE";
+Origin "countzero's repo";
+Label "countzero's repo";
 Suite stable;
 Version 1.0;
-Codename CODENAME_HERE;
+Codename countzero's repo;
 Architectures iphoneos-arm;
 Components main;
-Description "DESCRIPTION_HERE";
+Description "countzero's repo";
 };
 };
 };
